--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/ottery-app/ottery-ui/issues"
   },
-  "homepage": "https://github.com/ottery-app/ottery-ui#readme"
+  "homepage": "https://github.com/ottery-app/ottery-ui#readme",
+  "dependencies": {
+    "react": "^18.0.0"
+  }
 }
