added image filter to allow easy use of default images

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oui",
-  "version": "1.0.0",
+  "name": "@lewibs/oui",
+  "version": "1.1.0",
   "description": "this is the ui framework which follows the ottery schema",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,12 @@
     "@mui/material": "^5.6.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
   }
 }
